--- a/free-surface-paper.bib
+++ b/free-surface-paper.bib
@@ -9,6 +9,16 @@
   publisher={Oxford University Press}
 }
 
+@article{hillebrand2014using,
+  author={Hillebrand, B. and Thieulot, C. and Geenen, T. and van den Berg, A. P. and Spakman, W.},
+  title={Using the level set method in geodynamical modeling of multi-material flows and Earth's free surface},
+  journal={Solid Earth},
+  volume={5},
+  year={2014},
+  number={2},
+  pages={1087--1098}
+}
+
 @article{kronbichler2012high,
   title={High accuracy mantle convection simulation through modern numerical methods},
   author={Kronbichler, Martin and Heister, Timo and Bangerth, Wolfgang},
