--- a/free-surface-paper.tex
+++ b/free-surface-paper.tex
@@ -137,7 +137,7 @@ with dynamic topography calculated as a postprocessing step \citep[e.g.][]{zhong
 
 There have been several approaches to treating real free surfaces in geodynamic simulations.
 \citet{zhong1996free} introduced a pseudo-free-surface formulation, where the free surface coordinate was
-treated as an extra variable that was integrated in time. In this approximation, the free surface 
+treated as an extra variable that was integrated in time. In this formulation, the free surface 
 is approximated on the undeformed Eulerian grid by applying pressure boundary conditions on the reference surface.
 The pressure is determined by a first-order Taylor series approximation of the hydrostatic pressure profile 
 predicted by the surface topography.
@@ -158,8 +158,8 @@ dynamics of subduction zone modeling.  In a benchmark study \citet{schmeling2008
 of a free surface on the sinking of a slab. They found that the nature of the free surface had a large effect 
 on the dynamics of the slab, affecting both the shape and the timing of sinking. Most of the 
 participating codes in that benchmark used the sticky air approximation.
-They found that the specific properties of the sticky air layer 
-controlled the shape and timing of the slab, and the viscosity averaging scheme for areas of transitional
+They found that the specific properties of the sticky air layer controlled the shape and timing of the slab.
+Furthermore, the viscosity averaging scheme for areas of transitional
 composition was extremely important, as the subducting slab entrained significant amounts of the sticky air.
 \citet{crameri2012comparison} conducted comparisons between sticky air and true free surface models, 
 demonstrating a range of parameters for sticky air which can mitigate some of the difficulties that it introduces.
